# langchain-course

./: .gitignore  pyproject.toml
chains/: basic-chains.py  chains-extended.py  parallel.py  under-the-hood.py
chat-models/: chat-models1.py  conversation.py  real-time-chat.py  save-chat-history-firebase.py
prompt-templates/: basic-templates.py  template-with-chat-model.py
